objects/AndOperation__c/AndOperation__c.object-meta.xml
<CustomObject>
    <label>AndOperation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GitCheck Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AndOperation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>