objects/AndOperation__c/fields/Active_In_College__c.field-meta.xml
<CustomField>
    <fullName>Active_In_College__c</fullName>
    <label>Active In College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>