objects/AndOperation__c/fields/And_Operation__c.field-meta.xml
<CustomField>
    <fullName>And_Operation__c</fullName>
    <formula>IF(ISPICKVAL(Active_In_College__c, &quot;Yes&quot;), &quot;In The College&quot;,
IF(ISPICKVAL(Active_On_Social_Media__c, &quot;Yes&quot;), &quot;Active on Social Media&quot;,
IF(ISPICKVAL(Active_In_College__c, &quot;No&quot;), &quot;Not In The College&quot;, &quot;Other Value&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>And Operation</label>
    <type>Text</type>
</CustomField>